--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
-
 <html>
     <head>
- 
-  
-    
-
     <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 </style>
 
 <!-- Matomo -->
-<script type="text/javascript">
+<script type="text/plain" data-usercentrics="Google Analytics">
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
@@ -39,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
   <!-- Matomo Tag Manager -->
-<script type="text/javascript">
+<script type="text/javascript" type="text/plain" data-usercentrics="Google Analytics">
 var _mtm = window._mtm = window._mtm || [];
 _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
 var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
