--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<!-- <script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="pE_2RCy5m" ></script> -->
-<script id="usercentrics-cmp" data-settings-id="pE_2RCy5m" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
-
+<script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="pE_2RCy5m" ></script>
+<!-- <script id="usercentrics-cmp" data-settings-id="pE_2RCy5m" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
+ -->
 <style>
 body {font-family: "Times New Roman", Georgia, Serif;}
 h1, h2, h3, h4, h5, h6 {
