--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="pE_2RCy5m" ></script>
-<!-- <script id="usercentrics-cmp" data-settings-id="pE_2RCy5m" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
- -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WSZMD2Z');</script>
+<!-- End Google Tag Manager -->
+        
 <style>
 body {font-family: "Times New Roman", Georgia, Serif;}
 h1, h2, h3, h4, h5, h6 {
@@ -17,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 </style>
 
 <!-- Matomo -->
-<script type="text/plain" data-usercentrics="Google Analytics">
+<!-- <script type="text/plain" data-usercentrics="Google Analytics">
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
@@ -29,25 +34,28 @@ h1, h2, h3, h4, h5, h6 {
   var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
   g.type='text/javascript'; g.async=true; g.src='//cdn.matomo.cloud/naremanhilles.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
   })();
-</script>
+</script> -->
 <!-- End Matomo Code -->
 
 
 
 
   <!-- Matomo Tag Manager -->
-<script type="text/javascript" type="text/plain" data-usercentrics="Google Analytics">
+<!-- <script type="text/javascript" type="text/plain" data-usercentrics="Google Analytics">
 var _mtm = window._mtm = window._mtm || [];
 _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
 var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
 g.type='text/javascript'; g.async=true; g.src='https://cdn.matomo.cloud/naremanhilles.matomo.cloud/container_Xx6JGfdC.js'; s.parentNode.insertBefore(g,s);
-</script>
+</script> -->
 <!-- End Matomo Tag Manager -->
 
 </head>
 
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSZMD2Z"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
