--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
         
 <style>
-body {font-family: "Times New Roman", Georgia, Serif;}
+body {font-family: "Times New Roman", Georgia, Serif;overflow: scroll;}
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display";
   letter-spacing: 5px;
