--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <title>W3.CSS Template</title>
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="c11f1a38-5bf0-4802-82b7-1b328f08635c" type="text/javascript"></script>
-
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="6d2ea4c8-21f1-45b0-975a-c74109e62923" data-blockingmode="auto" type="text/javascript"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
